; ModuleID = '/home/carl/AnghaBench/vlc/modules/lua/libs/extr_win.c_vlclua_console_wait.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/lua/libs/extr_win.c_vlclua_console_wait.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@WAIT_OBJECT_0 = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @vlclua_console_wait to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vlclua_console_wait(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  store i32* %0, i32** %2, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = call i64 @luaL_optinteger(i32* %5, i32 1, i32 0)
  %7 = trunc i64 %6 to i32
  store i32 %7, i32* %3, align 4
  %8 = load i32*, i32** %2, align 8
  %9 = call i32 @GetConsole(i32* %8)
  %10 = load i32, i32* %3, align 4
  %11 = call i64 @WaitForSingleObject(i32 %9, i32 %10)
  store i64 %11, i64* %4, align 8
  %12 = load i32*, i32** %2, align 8
  %13 = load i64, i64* %4, align 8
  %14 = load i64, i64* @WAIT_OBJECT_0, align 8
  %15 = icmp eq i64 %13, %14
  %16 = zext i1 %15 to i32
  %17 = call i32 @lua_pushboolean(i32* %12, i32 %16)
  ret i32 1
}

declare dso_local i64 @luaL_optinteger(i32*, i32, i32) #1

declare dso_local i64 @WaitForSingleObject(i32, i32) #1

declare dso_local i32 @GetConsole(i32*) #1

declare dso_local i32 @lua_pushboolean(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
